@@ -299,9 +299,9 @@ verilog/parser_bugs.v:343: TASK  'task' 't'
 verilog/parser_bugs.v:343: VAR  'port' 'FVEC' 'task' '' '[2:0]' '' ''
 verilog/parser_bugs.v:343: PORT  'FVEC' 'task' 'input' '[2:0]' '' '1'
 verilog/parser_bugs.v:343: VAR  'port' 'FVEC2' 'task' '' '[2:0]' '' ''
-verilog/parser_bugs.v:343: PORT  'FVEC2' 'task' 'input' '[2:0]' '' '1'
+verilog/parser_bugs.v:343: PORT  'FVEC2' 'task' 'input' '[2:0]' '' '2'
 verilog/parser_bugs.v:344: VAR  'port' 'NOVEC' 'task' '' '' '' ''
-verilog/parser_bugs.v:344: PORT  'NOVEC' 'task' 'input' '' '' '1'
+verilog/parser_bugs.v:344: PORT  'NOVEC' 'task' 'input' '' '' '3'
 verilog/parser_bugs.v:346: ENDTASKFUNC  'endtask'
 verilog/parser_bugs.v:347: ENDMODULE  'endmodule'
 verilog/parser_bugs.v:349: MODULE  'module' 'bugfor' undef '0'
@@ -346,51 +346,51 @@ verilog/parser_bugs.v:398: ENDMODULE  'endmodule'
 verilog/parser_bugs.v:401: VAR  'port' 'sig' 'sequence' '' '' '' ''
 verilog/parser_bugs.v:401: PORT  'sig' 'sequence' 'input' '' '' '1'
 verilog/parser_bugs.v:401: VAR  'port' 'clks_before' 'sequence' '' '' '' ''
-verilog/parser_bugs.v:401: PORT  'clks_before' 'sequence' 'input' '' '' '1'
+verilog/parser_bugs.v:401: PORT  'clks_before' 'sequence' 'input' '' '' '2'
 verilog/parser_bugs.v:401: VAR  'port' 'clk' 'sequence' '' '' '' ''
-verilog/parser_bugs.v:401: PORT  'clk' 'sequence' 'input' '' '' '1'
+verilog/parser_bugs.v:401: PORT  'clk' 'sequence' 'input' '' '' '3'
 verilog/parser_bugs.v:401: VAR  'port' 'rst' 'sequence' '' '' '' '1'b0'
-verilog/parser_bugs.v:401: PORT  'rst' 'sequence' 'input' '' '' '1'
+verilog/parser_bugs.v:401: PORT  'rst' 'sequence' 'input' '' '' '4'
 verilog/parser_bugs.v:405: VAR  'port' 'sample' 'property' '' '' '' ''
 verilog/parser_bugs.v:405: PORT  'sample' 'property' 'input' '' '' '1'
 verilog/parser_bugs.v:405: VAR  'port' 'sig' 'property' '' '' '' ''
-verilog/parser_bugs.v:405: PORT  'sig' 'property' 'input' '' '' '1'
+verilog/parser_bugs.v:405: PORT  'sig' 'property' 'input' '' '' '2'
 verilog/parser_bugs.v:405: VAR  'port' 'clks_before' 'property' '' '' '' ''
-verilog/parser_bugs.v:405: PORT  'clks_before' 'property' 'input' '' '' '1'
+verilog/parser_bugs.v:405: PORT  'clks_before' 'property' 'input' '' '' '3'
 verilog/parser_bugs.v:405: VAR  'port' 'clks_after' 'property' '' '' '' ''
-verilog/parser_bugs.v:405: PORT  'clks_after' 'property' 'input' '' '' '1'
+verilog/parser_bugs.v:405: PORT  'clks_after' 'property' 'input' '' '' '4'
 verilog/parser_bugs.v:405: VAR  'port' 'clk' 'property' '' '' '' '$default_clk'
-verilog/parser_bugs.v:405: PORT  'clk' 'property' 'input' '' '' '1'
+verilog/parser_bugs.v:405: PORT  'clk' 'property' 'input' '' '' '5'
 verilog/parser_bugs.v:405: VAR  'port' 'rst' 'property' '' '' '' '1'b0'
-verilog/parser_bugs.v:405: PORT  'rst' 'property' 'input' '' '' '1'
+verilog/parser_bugs.v:405: PORT  'rst' 'property' 'input' '' '' '6'
 verilog/parser_bugs.v:411: VAR  'port' 'prop' 'property' '' '' '' ''
 verilog/parser_bugs.v:411: PORT  'prop' 'property' 'input' '' '' '1'
 verilog/parser_bugs.v:411: VAR  'port' 'clk' 'property' '' '' '' '$default_clk'
-verilog/parser_bugs.v:411: PORT  'clk' 'property' 'input' '' '' '1'
+verilog/parser_bugs.v:411: PORT  'clk' 'property' 'input' '' '' '2'
 verilog/parser_bugs.v:411: VAR  'port' 'rst' 'property' '' '' '' '1'b0'
-verilog/parser_bugs.v:411: PORT  'rst' 'property' 'input' '' '' '1'
+verilog/parser_bugs.v:411: PORT  'rst' 'property' 'input' '' '' '3'
 verilog/parser_bugs.v:415: VAR  'port' 'trig' 'property' '' '' '' ''
 verilog/parser_bugs.v:415: PORT  'trig' 'property' 'input' '' '' '1'
 verilog/parser_bugs.v:415: VAR  'port' 'n' 'property' '' '' '' ''
-verilog/parser_bugs.v:415: PORT  'n' 'property' 'input' '' '' '1'
+verilog/parser_bugs.v:415: PORT  'n' 'property' 'input' '' '' '2'
 verilog/parser_bugs.v:415: VAR  'port' 'cond' 'property' '' '' '' ''
-verilog/parser_bugs.v:415: PORT  'cond' 'property' 'input' '' '' '1'
+verilog/parser_bugs.v:415: PORT  'cond' 'property' 'input' '' '' '3'
 verilog/parser_bugs.v:415: VAR  'port' 'clk' 'property' '' '' '' '$default_clk'
-verilog/parser_bugs.v:415: PORT  'clk' 'property' 'input' '' '' '1'
+verilog/parser_bugs.v:415: PORT  'clk' 'property' 'input' '' '' '4'
 verilog/parser_bugs.v:415: VAR  'port' 'rst' 'property' '' '' '' '1'b0'
-verilog/parser_bugs.v:415: PORT  'rst' 'property' 'input' '' '' '1'
+verilog/parser_bugs.v:415: PORT  'rst' 'property' 'input' '' '' '5'
 verilog/parser_bugs.v:421: VAR  'port' 'start_ev' 'property' '' '' '' ''
 verilog/parser_bugs.v:421: PORT  'start_ev' 'property' 'input' '' '' '1'
 verilog/parser_bugs.v:421: VAR  'port' 'start_data' 'property' '' '' '' ''
-verilog/parser_bugs.v:421: PORT  'start_data' 'property' 'input' '' '' '1'
+verilog/parser_bugs.v:421: PORT  'start_data' 'property' 'input' '' '' '2'
 verilog/parser_bugs.v:421: VAR  'port' 'end_ev' 'property' '' '' '' ''
-verilog/parser_bugs.v:421: PORT  'end_ev' 'property' 'input' '' '' '1'
+verilog/parser_bugs.v:421: PORT  'end_ev' 'property' 'input' '' '' '3'
 verilog/parser_bugs.v:421: VAR  'port' 'end_data' 'property' '' '' '' ''
-verilog/parser_bugs.v:421: PORT  'end_data' 'property' 'input' '' '' '1'
+verilog/parser_bugs.v:421: PORT  'end_data' 'property' 'input' '' '' '4'
 verilog/parser_bugs.v:421: VAR  'port' 'clk' 'property' '' '' '' '$default_clk'
-verilog/parser_bugs.v:421: PORT  'clk' 'property' 'input' '' '' '1'
+verilog/parser_bugs.v:421: PORT  'clk' 'property' 'input' '' '' '5'
 verilog/parser_bugs.v:421: VAR  'port' 'rst' 'property' '' '' '' '1'b0'
-verilog/parser_bugs.v:421: PORT  'rst' 'property' 'input' '' '' '1'
+verilog/parser_bugs.v:421: PORT  'rst' 'property' 'input' '' '' '6'
 verilog/pinorder.v:006: MODULE  'module' 'pinorder4' undef '0'
 verilog/pinorder.v:007: VAR  'net' 'b_i' 'module' 'wire' '' '' ''
 verilog/pinorder.v:008: VAR  'net' 'd_o' 'module' 'wire' '' '' ''
